<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/pn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_sms"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <Button
        android:id="@+id/bt_send_sms"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/showActivitiesButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/activities" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/contacts" />

    <Button
        android:id="@+id/barCodeButton"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/barcode" />

    <TextView
        android:text="@string/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/tv_receive_sms"
        android:layout_width="match_parent"
        android:layout_height="209dp" />

</LinearLayout>